[Polyam] Fix visibility of video overlay controls in light mode
Port 3df8fb8fe9d33c7fbe51aa0a418b8b9ca46bb61b to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/mastodon/components.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon/components.scss
@@ -4295,7 +4295,8 @@ input.glitch-setting-text {
     cursor: pointer;
 
     & > div {
-      background: rgb(from var(--color-shadow-primary) r g b / 60%);
+      color: var(--color-text-on-media);
+      background: rgb(from var(--color-bg-media) r g b / 60%);
       border-radius: 8px;
       padding: 12px 9px;
       backdrop-filter: $backdrop-blur-filter;
@@ -4308,7 +4309,7 @@ input.glitch-setting-text {
     button,
     a {
       display: inline;
-      color: var(--color-text-primary);
+      color: var(--color-text-on-media);
       background: transparent;
       border: 0;
       padding: 0 8px;
@@ -4319,7 +4320,7 @@ input.glitch-setting-text {
       &:hover,
       &:active,
       &:focus {
-        color: var(--color-text-primary);
+        color: var(--color-text-on-media);
       }
     }
 
